--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "author": "Devias",
   "private": true,
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start -p $PORT",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build-export": "next build && next export",
+    "dev": "next dev",
+    "build": "next build && next export",
+    "start": "next start",
     "lint": "next lint",
     "lint-fix": "next lint --fix"
   },
